<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/background_light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/settings_title_text_size"
                android:text = "@string/help_cursor_title"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_cursor_desc"
                android:textColor="@android:color/tertiary_text_dark"/>

            <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@drawable/section_bar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/settings_title_text_size"
                android:text = "@string/help_writing_mode_title"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_writing_mode_desc"
                android:textColor="@android:color/tertiary_text_dark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@drawable/section_bar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/settings_title_text_size"
                android:text = "@string/help_auxiliary_layer_title"
                android:textColor="@android:color/tertiary_text_dark"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_auxiliary_layer_desc"
                android:textColor="@android:color/tertiary_text_dark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@drawable/section_bar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/settings_title_text_size"
                android:text = "@string/help_buttons_notepad"
                android:textColor="@android:color/tertiary_text_dark"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_space_bar_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_space"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_backspace_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_backspace"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>
            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:src = "@drawable/ic_edit_white"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_buttons_toggle_edit"
                android:textColor="@android:color/tertiary_text_dark"/>
        </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_visibility_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_toggle_view"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_add_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_add"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_remove_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_remove"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:src = "@drawable/ic_more_vert_white"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_buttons_options"
                    android:textColor="@android:color/tertiary_text_dark"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>